--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^3.2.2",
+    "bootstrap": "^5.1.3",
     "firebase": "^9.8.3",
     "pinia": "^2.0.14",
     "vue": "^3.2.37",
